-
Bug
-
Resolution: Done
-
P2: Important
-
5.0.0 RC 2
-
None
Opening the qmlvideo example from the welcome screen and launching it in creator fails:
file:/// ..../main.qml: File not found
The examples should be adopted to use qrc files.
For Gerrit Dashboard: QTBUG-28614 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
42859,4 | Examples: Remove qmlapplicationviewer template. | stable | qt/qtmultimedia | Status: MERGED | +2 | 0 |