Examples: Remove qmlapplicationviewer template.

Fix shadow-builds for qmlviewer examples by using qrc files instead.

Task-number: QTBUG-28614
Change-Id: Iec993f95166ffd09e8edff552ceca5bc4112d293
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@digia.com>
Reviewed-by: hjk <qthjk@ovi.com>