examples/multimedia/video/qmlvideo/qmlvideo.pro
@@ -1,6 +1,8 @@
 TEMPLATE = app
 TARGET = qmlvideo
 
+QT += quick
+
 LOCAL_SOURCES = main.cpp
 LOCAL_HEADERS = trace.h
 
@@ -10,8 +12,6 @@ RESOURCES += qmlvideo.qrc
 
 SNIPPETS_PATH = ../snippets
 include($$SNIPPETS_PATH/performancemonitor/performancemonitordeclarative.pri)
-
-include(qmlapplicationviewer/qmlapplicationviewer.pri)
 
 target.path = $$[QT_INSTALL_EXAMPLES]/multimedia/video/qmlvideo
 INSTALLS += target
