examples/multimedia/video/qmlvideofx/qmlvideofx.pro
@@ -1,6 +1,8 @@
 TEMPLATE = app
 TARGET = qmlvideofx
 
+QT += quick
+
 LOCAL_SOURCES = filereader.cpp main.cpp
 LOCAL_HEADERS = filereader.h trace.h
 
@@ -16,8 +18,6 @@ maemo6: {
     DEFINES += SMALL_SCREEN_LAYOUT
     DEFINES += SMALL_SCREEN_PHYSICAL
 }
-
-include(qmlapplicationviewer/qmlapplicationviewer.pri)
 
 target.path = $$[QT_INSTALL_EXAMPLES]/multimedia/video/qmlvideofx
 INSTALLS += target
