examples/multimedia/video/snippets/performancemonitor/performancemonitordeclarative.pri
@@ -3,3 +3,4 @@ include($$PWD/performancemonitor.pri)
 
 HEADERS += $$PWD/performancemonitordeclarative.h
 SOURCES += $$PWD/performancemonitordeclarative.cpp
+RESOURCES += $$PWD/performancemonitordeclarative.qrc
